<resources>
    <string name="app_name">全军出击 高手攻略</string>

    <string name="vip_center_title">会员中心</string>
    <string name="vip_center_login">登陆</string>
    <string name="vip_center_register">注册</string>
    <string name="vip_center_message">我的消息</string>
    <string name="vip_center_collect">我的收藏</string>
    <string name="vip_center_video">本地视频</string>
    <string name="vip_center_suggestion">意见反馈</string>
    <string name="vip_center_setting">设置与帮助</string>
    <string name="vip_center_share">分享给好友</string>
    <string name="vip_center_nickname">Eason</string>
    <string name="vip_center_profile">一根毛都没有...</string>
    <string name="register_agreement">《绝地求生用户使用协议》</string>

</resources>
