<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@mipmap/top"
        android:gravity="center_horizontal">

        <TextView
            android:layout_marginTop="28sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vip_center_title"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <FrameLayout
            android:visibility="visible"
            android:id="@+id/header_before_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.8"
                    android:gravity="center_horizontal"

                    >
                    <!--圆形头像-->
                    <com.gsy.glsurvive.view.CircleImageView
                        android:id="@+id/img_camera"
                        android:layout_marginTop="10dp"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/zhanweitu"
                        app:border="true"
                        app:border_color="#16f5f5f5"
                        app:border_width="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"></LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="center">

                        <Button
                            android:textColor="@color/black"
                            android:id="@+id/login_bt"
                            android:layout_width="80dp"
                            android:layout_height="40dp"
                            android:background="@drawable/button_corner"
                            android:text="@string/vip_center_login" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:gravity="center">

                        <Button
                            android:textColor="@color/black"
                            android:id="@+id/register_bt"
                            android:layout_width="80dp"
                            android:layout_height="40dp"
                            android:background="@drawable/button_corner"
                            android:text="@string/vip_center_register" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"></LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </FrameLayout>

        <FrameLayout
            android:visibility="invisible"
            android:id="@+id/header_after_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center">
                    <!--圆形头像-->
                    <com.gsy.glsurvive.view.CircleImageView
                        android:id="@+id/img_camera_login"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/zhanweitu"
                        app:border="true"
                        app:border_color="#16f5f5f5"
                        app:border_width="2dp" />

                </LinearLayout>
                 <LinearLayout
                     android:id="@+id/profile_details"
                     android:orientation="horizontal"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="5"
                     >
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="4"
                         android:orientation="vertical">

                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="2"></LinearLayout>

                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
                             >

                             <TextView
                                 android:maxEms="10"
                                 android:singleLine="true"
                                 android:ellipsize="end"
                                 android:id="@+id/nickName"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
                                 android:text="你好，游客"
                                 android:textSize="15sp" />
                         </LinearLayout>

                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1">

                             <TextView
                                 android:maxEms="10"
                                 android:singleLine="true"
                                 android:ellipsize="end"
                                 android:id="@+id/signature"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
                                 android:text="留下你的印记"
                                 android:textSize="15sp"

                                />
                         </LinearLayout>

                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="2"></LinearLayout>
                     </LinearLayout>

                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center">

                         <ImageView
                             android:layout_width="12dp"
                             android:layout_height="12dp"
                             android:src="@mipmap/genduo" />
                     </LinearLayout>
                 </LinearLayout>

            </LinearLayout>
        </FrameLayout>
    </FrameLayout>

    <View
       android:layout_width="match_parent"
       android:layout_height="12dp"
       android:background="@color/bg_gray"
       ></View>
    <LinearLayout
        android:id="@+id/my_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="18dp"
            >
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/xiaoxi_geren"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"

            >
            <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vip_center_message"
                android:textSize="16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@mipmap/genduo" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_gray">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/my_collect"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="18dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/shoucang" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/vip_center_collect"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@mipmap/genduo"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_gray">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/local_video"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="18dp"
            >
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/shiping"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"

            >
            <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vip_center_video"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@mipmap/genduo" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:background="@color/bg_gray"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/my_suggestion"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="18dp"
            >
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/yijian_geren"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"

            >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/vip_center_suggestion"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
           android:gravity="center"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@mipmap/genduo"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_gray">
    </View>
    <LinearLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="18dp"
            >
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/shezhi_geren"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"

            >
            <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vip_center_setting"
                android:textSize="16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
           android:gravity="center"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@mipmap/genduo"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/bg_gray">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/share"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="18dp"
            >
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/fenxiang"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"

            >
            <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vip_center_share"
                android:textSize="16sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@mipmap/genduo"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@color/bg_gray"
        >
    </LinearLayout>

</LinearLayout>